# CadastroDeOnibus

./: .replit  creditos.txt  main.py  pyproject.toml  teste.py  teste_leitura_teclado.py  testes.py  to_do.txt
backend/: Colunas.py  Colunas_Inversa.py  __init__.py  matriz.txt  teste_pigas.py
backend/BD_Contas/: Todas_Contas.txt
backend/BD_Dados/: LogDeAlterações.txt  Usuario1_Dados.txt  Usuario3_Dados.txt  Usuario4_Dados.txt  Usuario7_Dados.txt  Usuario9_Dados.txt
backend/Funcoes/: Alterar_Dado.py  Consulta_Espec.py  Deletar.py  Encriptador_Senhas.py  Inicializar.py  Inserir.py  Matriz.py  Salvar_Contas.py  Salvar_Matriz.py  Usuario.py  Verificar_Email.py  Verificar_Senha.py
interface/: Detalhes.py  Op_MenuBAR.py  PopupCreditosImagens.py  Popup_Creditos.py  Popup_Padrao.py  Popup_Save.py  Tela_Alterar.py  Tela_Cadastro.py  Tela_Consulta.py  Tela_Deletar.py  Tela_Inicial.py  Tela_Inserir.py  Tela_Login.py  Tela_PerfilUser.py  Tela_VerTudo.py  __init__.py
