[tool.poetry]
name = "repl_nix_CadastroDeOnibus-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PySimpleGUI = "^4.60.5"
python-interface = "^1.6.1"
backend = "^0.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
